# aws-dynamodb-encryption-python

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.rst  SUPPORT_POLICY.rst  appveyor.yml  buildspec.yml  ci-requirements.txt  park.cfg  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_static-analysis.yaml  ci_tests.yaml  integ-tests.yaml  local-tests.yaml  static-analysis.yaml
cfn/: CB.yml  DDB-EC-Python.yaml
codebuild/: python2.7.yml  python3.10.yml  python3.11.yml  python3.12.yml  python3.5.yml  python3.6.yml  python3.7.yml  python3.8.yml  python3.9.yml
codebuild/release/: prod-release.yml  test-release.yml  validate.yml
dev_requirements/: ci-requirements.txt  doc-requirements.txt  examples-requirements.txt  linter-requirements.txt  release-requirements.txt  test-requirements.txt
doc/: conf.py  index.rst  requirements.txt
doc/lib/: internal.rst
doc/lib/delegated_keys/: index.rst  jce.rst
doc/lib/encrypted/: client.rst  config.rst  dynamodb_encryption_sdk.encrypted.client.rst  dynamodb_encryption_sdk.encrypted.resource.rst  dynamodb_encryption_sdk.encrypted.table.rst  helpers.rst  index.rst  item.rst  resource.rst  table.rst
doc/lib/materials/: index.rst  raw.rst  wrapped.rst
doc/lib/materials_providers/: aws_kms.rst  dynamodb_encryption_sdk.material_providers.most_recent.rst  dynamodb_encryption_sdk.material_providers.static.rst  metastore.rst  most_recent.rst  provider_stores.rst  providers.rst  static.rst  wrapped.rst
doc/lib/tools/: exceptions.rst  identifiers.rst  index.rst  structures.rst  transform.rst
examples/: README.md  README.rst  __init__.py  requirements.txt  setup.py  tox.ini
examples/src/: aws_kms_encrypted_client.py  aws_kms_encrypted_item.py  aws_kms_encrypted_resource.py  aws_kms_encrypted_table.py  most_recent_provider_encrypted_table.py  pylintrc  wrapped_rsa_encrypted_table.py  wrapped_symmetric_encrypted_table.py
examples/src/dynamodb_encryption_sdk_examples/: __init__.py  aws_kms_encrypted_client.py  aws_kms_encrypted_item.py  aws_kms_encrypted_resource.py  aws_kms_multi_region_key.py  wrapped_rsa_encrypted_table.py
examples/test/: __init__.py  examples_test_utils.py  pylintrc  requirements.txt  test_aws_kms_encrypted_examples.py  test_aws_kms_encrypted_table.py  test_most_recent_provider_encrypted_examples.py  test_wrapped_encrypted_examples.py
src/: pylintrc
src/dynamodb_encryption_sdk/: __init__.py  compatability.py  exceptions.py  identifiers.py  structures.py  transform.py
src/dynamodb_encryption_sdk/delegated_keys/: __init__.py  jce.py
src/dynamodb_encryption_sdk/encrypted/: __init__.py  client.py  item.py  resource.py  table.py
src/dynamodb_encryption_sdk/internal/: defaults.py  dynamodb_types.py  identifiers.py  str_ops.py  utils.py  validators.py
src/dynamodb_encryption_sdk/material_providers/: __init__.py  aws_kms.py  most_recent.py  static.py  wrapped.py
src/dynamodb_encryption_sdk/materials/: __init__.py  raw.py  wrapped.py
test/: README.rst  __init__.py  pylintrc  requirements.txt  source-build-check.sh  upstream-requirements-py27.txt  upstream-requirements-py311.txt  upstream-requirements-py37.txt
test/acceptance/: acceptance_test_generators.py  acceptance_test_utils.py  test_a_encrypted_item.py
test/acceptance/encrypted/: test_client.py  test_item.py  test_resource.py  test_table.py
test/cloudformation/: tables.yaml
test/functional/: functional_test_utils.py  functional_test_vector_generators.py  hypothesis_strategies.py  test_f_authentication_string_to_sign.py  test_f_encrypted_client.py  test_f_encrypted_item.py  test_f_encrypted_table.py  test_f_formatting_attribute_serialization.py  test_f_formatting_material_description_serialization.py  test_f_identifiers.py  test_f_str_ops.py  test_hypothesis_strategies.py  test_identifiers.py  test_structures.py
test/functional/delegated_keys/: test_jce.py
test/functional/encrypted/: test_client.py  test_item.py  test_resource.py  test_table.py
test/functional/internal/: test_str_ops.py  test_utils.py
test/functional/material_providers/: test_most_recent.py
test/functional/materials/: test_raw.py
test/integration/: integration_test_utils.py  test_i_materials_provider_aws_kms.py
test/unit/: test_check_python_version.py  test_compatability.py  test_structures.py  unit_test_utils.py
test/vectors/: deserialize_attribute.json  material_description.json  serialize_attribute.json  string_to_sign.json
(+47 files in other folders)
