[wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[mypy]
ignore_missing_imports = True

[tool:pytest]
markers =
    local: superset of unit and functional (does not require network access)
    unit: mark test as a unit test (does not require network access)
    functional: mark test as a functional test (does not require network access)
    integ: mark a test as an integration test (requires network access)
    ddb_integ: mark a test as an integration test that requires a real DynamoDB table (requires network access and not used in CI)
    accept: mark a test as an acceptance test (requires network access)
    examples: mark a test as an examples test (requires network access)
    hypothesis: mark a test as using hypothesis (will run many times for each pytest call)
    hypothesis_strategy: mark a test as testing a hypothesis strategy
    slow: mark a test as being known to take a long time to complete (order 5s < t < 60s)
    veryslow: mark a test as being known to take a very long time to complete (order t > 60s)
    nope: mark a test as being so slow that it should only be very infrequently (order t > 30m)
log_level=NOTSET

# Flake8 Configuration
[flake8]
max_complexity = 10
max_line_length = 120
import_order_style = google
application_import_names = dynamodb_encryption_sdk
builtins = raw_input
ignore =
    # Ignoring D205 and D400 because of false positives
    D205, D400,
    # Ignoring D401 pending discussion of imperative mood
    D401,
    # Ignoring D202 (no blank lines after function docstring) because mypy confuses flake8
    D202


# Doc8 Configuration
[doc8]
max-line-length = 120
