[wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True

[coverage:report]
show_missing = True
fail_under = 90

[mypy]
ignore_missing_imports = True

[tool:pytest]
markers =
    local: superset of unit and functional (does not require network access)
    unit: mark test as a unit test (does not require network access)
    functional: mark test as a functional test (does not require network access)
    integ: mark a test as an integration test (requires network access)
    ddb_integ: mark a test as an integration test that requires a real DynamoDB table (requires network access and not used in CI)
    accept: mark a test as an acceptance test (requires network access)
    generate: mark a test as a generator of test vectors (requires network access)
    examples: mark a test as an examples test (requires network access)
    hypothesis: mark a test as using hypothesis (will run many times for each pytest call)
    hypothesis_strategy: mark a test as testing a hypothesis strategy
    slow: mark a test as being known to take a long time to complete (order 5s < t < 60s)
    veryslow: mark a test as being known to take a very long time to complete (order t > 60s)
    nope: mark a test as being so slow that it should only be very infrequently (order t > 30m)
    travis_isolation: mark a test that crashes Travis CI when run with other tests
log_level=DEBUG

# Flake8 Configuration
[flake8]
max_complexity = 11
max_line_length = 120
import_order_style = google
application_import_names = dynamodb_encryption_sdk
builtins = raw_input
ignore =
    # Ignoring D205 and D400 because of false positives
    D205, D400,
    # Ignoring D401 pending discussion of imperative mood
    D401,
    # Ignoring D202 (no blank lines after function docstring) because mypy confuses flake8
    D202,
    # E203 is not PEP8 compliant https://github.com/ambv/black#slices
    E203,
    # W503 is not PEP8 compliant https://github.com/ambv/black#line-breaks--binary-operators
    W503


# Doc8 Configuration
[doc8]
max-line-length = 120

[isort]
line_length = 120
# https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
known_first_party = dynamodb_encryption_sdk
known_third_party =attr,aws_kms_encrypted_client,aws_kms_encrypted_item,aws_kms_encrypted_resource,aws_kms_encrypted_table,boto3,botocore,cryptography,dynamodb_encryption_sdk,functional_test_utils,functional_test_vector_generators,hypothesis,hypothesis_strategies,integration_test_utils,mock,most_recent_provider_encrypted_table,moto,mypy_extensions,pytest,pytest_mock,setuptools,six,wrapped_rsa_encrypted_table,wrapped_symmetric_encrypted_table
